--- a/src/Chat.html
+++ b/src/Chat.html
@@ -20,15 +20,15 @@
     </style>
 </head>
 <body style="width: 100vw; height: 100vh; overflow: hidden;">
-    <div style="display: flex; flex-direction: column; margin-left: 7%; margin-right: 7%;">
+    <div style="display: flex; flex-direction: column; height: 100%; margin-left: 7%; margin-right: 7%;">
         <div style="display: flex; justify-content: center; margin-top: 3%;">
             <h1 style="font-size: 45px; font-family: 'Inter', sans-serif; font-weight: 200;">Chatt's Chat Room</h1>
         </div>
-        <div style="display: flex; margin-top: 3%; height: 65vh">
+        <div style="display: flex; margin-top: 3%; height: 60%">
 
         </div>
-        <div style="display: flex; margin-top: 2%; height: 5.5vh;">
-            <div style="display: flex; flex-direction: row; width: 100%; height: 100%; border: 2px solid black; border-radius: 45px; align-items: center;">
+        <div style="display: flex; margin-top: 2%; height: 5.5%;">
+            <div style="display: flex; flex-direction: row; width: 100%; height: 100%; border: 1.5px solid black; border-radius: 45px; align-items: center;">
                 <input type="text" style="display: flex; width: 90%; height: 70%; margin-left: 2%; font-size: 15px; font-family: 'Inter', sans-serif; font-weight: 400;" placeholder="Write something to send...">
                 <div style="display: flex; margin-left: auto; margin-right: auto; font-size: 20px; font-family: 'Inter', sans-serif; font-weight: 400; color: #0075FF; cursor: pointer;">Send</div>
             </div>
