--- a/src/Chat.html
+++ b/src/Chat.html
@@ -29,10 +29,50 @@
         </div>
         <div style="display: flex; margin-top: 2%; height: 5.5%;">
             <div style="display: flex; flex-direction: row; width: 100%; height: 100%; border: 1.5px solid black; border-radius: 45px; align-items: center;">
-                <input type="text" style="display: flex; width: 90%; height: 70%; margin-left: 2%; font-size: 15px; font-family: 'Inter', sans-serif; font-weight: 400;" placeholder="Write something to send...">
-                <div style="display: flex; margin-left: auto; margin-right: auto; font-size: 20px; font-family: 'Inter', sans-serif; font-weight: 400; color: #0075FF; cursor: pointer;">Send</div>
+                <input id="input" type="text" style="display: flex; width: 90%; height: 70%; margin-left: 2%; font-size: 15px; font-family: 'Inter', sans-serif; font-weight: 400;" placeholder="Write something to send..." onkeypress="onkeypress(event)">
+                <div style="display: flex; margin-left: auto; margin-right: auto; font-size: 20px; font-family: 'Inter', sans-serif; font-weight: 400; color: #0075FF; cursor: pointer;" onclick="send()">Send</div>
             </div>
         </div>
     </div>
+
+    <script>
+        let input = document.getElementById("input");
+        let messages = document.getElementById("messages");
+
+        function onkeypress(event)
+        {
+            if(event.key == "Enter")
+            {
+                send();
+            }
+        }
+
+        function send()
+        {
+            const xHttp = new XMLHttpRequest()
+            xHttp.onload = function()
+            {
+
+            }
+
+            xHttp.open("POST", "SendMessage.php");
+            xHttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+            xHttp.send("message=" + input.value);
+        }
+
+        let reset = setInterval(
+            function ()
+            {
+                const xHttp = new XMLHttpRequest();
+                xHttp.onload = function()
+                {
+                    messages.innerHTML = xHttp.responseText;
+                }
+                xHttp.open("GET", "GetMessage.php");
+                xHttp.send();
+            },
+            100
+        );
+    </script>
 </body>
 </html>
